EEC_InitBackup/src/objects/Junction_InspReg__c.object
<CustomObject>
    <description>Junction object that manages the N:N relationship between the Standard Visit Items and Regulations objects</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_VIR_ID__c</fullName>
        <externalId>true</externalId>
        <label>External VIR ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regulation__c</fullName>
        <description>This field implements the master-detail relationship between the master Regulation object and the detail JunctionInspReg object</description>
        <label>Regulation</label>
        <referenceTo>Regulation__c</referenceTo>
        <relationshipLabel>Associated Standard Visit Items</relationshipLabel>
        <relationshipName>Junction_InspRegs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Standard_Inspection_Item__c</fullName>
        <description>This field implements the master-detail relationship between the master Standard Inspection Item object and the detail JunctionInspReg object</description>
        <label>Standard Visit Item</label>
        <referenceTo>Standard_Inspection_Item__c</referenceTo>
        <relationshipLabel>Visit Items Regulation</relationshipLabel>
        <relationshipName>Junction_InspRegs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Visit Items Regulation</label>
    <nameField>
        <displayFormat>VIR# {000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Items Regulation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>